--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Text&family=Libre+Baskerville&family=Young+Serif&display=swap");
+@import url("/style/character/venti.css");
+@import url("/style/hero.css");
+@import url("/style/archon-element.css");
+@import url("/style/aside.css");
+@import url("/style/footer.css");
 
 :root {
   /* pallette paimon */
@@ -40,60 +45,23 @@ p {
   color: var(--pickled-bluewood);
 }
 
-/* hero */
+/* Scrollbar */
 
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 55px 0 55px;
-  color: var(--pickled-bluewood);
-  background-image: url("/image/twilight-2.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  transition: 0.3s;
+::-webkit-scrollbar {
+  background: transparent;
+  width: 10px;
 }
 
-.title {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  padding: 0 40px 0 40px;
+::-webkit-scrollbar-track {
+  display: none;
 }
 
-.title > h1 {
-  font-size: 60px;
-  margin: 0;
-}
-
-.paimon > img {
-  width: 550px;
-}
-
-.view {
-  padding-top: 17px;
-  padding-bottom: 17px;
-}
-
-.view > a {
+::-webkit-scrollbar-thumb {
   background-color: var(--pickled-bluewood);
-  color: var(--soft-amber);
-  border-radius: 5px;
-  padding: 17px 30px 17px 30px;
-  cursor: pointer;
   transition: 0.3s;
 }
 
-.view > a {
-  text-decoration: none;
-  color: var(--soft-amber);
-}
-
-.view > a:hover {
-  color: var(--pickled-bluewood);
+::-webkit-scrollbar-thumb:hover {
   background-color: var(--soft-amber);
   transition: 0.3s;
 }
@@ -101,7 +69,6 @@ header {
 /* navbar */
 
 nav {
-  /* background-color: var(--pickled-bluewood); */
   position: sticky;
   top: 0;
   padding: 0;
@@ -115,13 +82,10 @@ nav {
   list-style-type: none;
   padding: 0;
   background-color: var(--pickled-bluewood);
-  transition: 0.3s;
 }
 
 .navbar-responsive {
   display: none;
-  opacity: 1;
-  transition: opacity 1s;
 }
 
 .navbar > li > a {
@@ -141,267 +105,11 @@ nav {
   transition: 0.3s;
 }
 
-/* archon element */
-
-.archon-element {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  gap: 60px;
-  padding: 120px 70px 120px 70px;
-}
-
-.archon-element > p {
-  line-height: 25px;
-  color: var(--pickled-bluewood);
-}
-
-.element > img {
-  width: 170px;
-  height: 170px;
-}
-
-.element > p {
-  font-weight: bold;
-}
-
-.ideal {
-  background-color: var(--pickled-bluewood);
-  color: var(--soft-amber);
-  padding: 10px 5px 10px 5px;
-  border-radius: 5px;
-  font-size: 18px;
-  font-family: "Libre Baskerville", serif;
-}
-
-.all-element {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 50px 50px;
-}
-
-/* venti */
-
-.venti {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 100px 80px 100px 80px;
-}
-
-.figure-venti,
-.details-venti {
-  display: flex;
-  flex-direction: column;
-  padding-left: 20px;
-  padding-right: 20px;
-  width: 640px;
-}
-
-.venti-name > h3 {
-  color: var(--keppel);
-  font-size: 46px;
-  line-height: 35px;
-}
-
-.venti-name {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  text-align: end;
-  gap: 10px;
-}
-
-.venti-title > p {
-  background-color: var(--rangitoto);
-  padding: 5px 10px 5px 35px;
-  color: white;
-  font-size: 24px;
-  border-radius: 80px 10px 10px 10px;
-}
-
-.details-venti {
-  gap: 30px;
-}
-
-.venti-ideal {
-  color: var(--pickled-bluewood) !important;
-  font-size: 40px;
-}
-
-.details-venti > h3 {
-  color: var(--keppel);
-}
-
-.desc {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.known-venti {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 10px 10px;
-}
-
-.known-venti > p {
-  background-color: var(--keppel);
-  color: white;
-  padding: 10px;
-  border-radius: 10px;
-}
-
-.video > iframe {
-  width: 100%;
-  height: 320px;
-  border-radius: 7px;
-}
-
-.image-character {
-  display: flex;
-  justify-content: center;
-}
-
-.image-character img {
-  width: 600px;
-}
-
-/* Aside */
-
-.aside {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 20px;
-  padding: 20px;
-  margin: 50px 80px 50px 80px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px gray;
-}
-
-.table {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  gap: 20px;
-  width: 100%;
-}
-
-.table-desc {
-  width: 110px;
-  line-height: 21px;
-}
-
-.table-desc > p {
-  padding-bottom: 10px;
-  color: black;
-  font-size: 14px;
-}
-
-.table-desc > div > p {
-  font-size: 14px;
-}
-
-.figure-genshin {
-  align-self: center;
-  text-align: center;
-}
-
-.figure-genshin > img {
-  padding-bottom: 10px;
-  width: 250px;
-}
-
-/* Footer */
-
-footer {
-  padding: 10px 80px 0 80px;
-  background-color: var(--pickled-bluewood);
-}
-
-.about {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.copyright {
-  border-top: 1px solid var(--soft-amber);
-}
-
-.copyright > p {
-  text-align: center;
-  color: white;
-  font-size: 14px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.desc-seven > p,
-.source > p,
-.support-links > p,
-.about-me > p {
-  padding-bottom: 10px;
-  font-size: 14px;
-}
-
-.desc-seven > p > strong,
-.source > p > b,
-.support-links > p > b,
-.about-me > p > b {
-  color: var(--soft-amber);
-  font-size: 18px;
-}
-
-.footer-desc > p {
-  font-size: 14px;
-  color: white;
-  line-height: 25px;
-}
-
-.footer-text > p > a {
-  text-decoration: none;
-  font-size: 14px;
-  color: white;
-  line-height: 25px;
-  transition: 0.3s;
-}
-
-.footer-text > p > a:hover {
-  color: var(--soft-amber);
-  transition: 0.3s;
-}
-
-.footer-about {
-  display: flex;
-  justify-content: flex-start;
-  gap: 10px;
-}
-
-.footer-about > a > i {
-  color: white;
-  font-size: 36px;
-  transition: 0.3s;
-}
-
-.footer-about > a > i:hover {
-  color: var(--soft-amber);
-  transition: 0.3s;
-}
-
 /* responsive */
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1200px) {
   p {
-    font-size: 16.5px;
+    font-size: 17.5px;
   }
 
   /* hero */
@@ -422,21 +130,32 @@ footer {
   }
 
   .paimon > img {
-    width: 280px;
+    height: 100%;
+    object-fit: fill;
   }
 
   /* navbar */
 
   .navbar {
+    display: flex;
     flex-direction: column;
-    display: none;
-    transition: 0.3s;
+    transition: 0.4s;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    transform: translateY(-100%);
+    z-index: -1;
+  }
+
+  .active {
+    transform: translateY(0);
+    transition: 0.4s;
   }
 
   .navbar-responsive {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     list-style-type: none;
     padding: 0;
@@ -444,13 +163,10 @@ footer {
     transition: 0.3s;
   }
 
-  .active {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    right: 0;
-    display: flex !important;
-    transition: 0.3s;
+  .navbar-responsive li p {
+    color: var(--soft-amber);
+    width: 150px;
+    text-align: center;
   }
 
   .navbar-responsive li button {
@@ -460,6 +176,177 @@ footer {
     color: var(--soft-amber);
     text-decoration: none;
     width: 150px;
+    height: 70px;
+    border: none;
+    background: none;
+    border-bottom: 0 solid;
+    font-size: 30px;
+    transition: 0.3s;
+  }
+
+  /* archon element */
+
+  .archon-element {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .element > img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .ideal {
+    font-size: 15.5px;
+  }
+
+  .all-element {
+    gap: 25px 25px;
+  }
+
+  /* venti */
+
+  .venti {
+    flex-direction: column;
+    padding-left: 30px;
+    padding-right: 30px;
+    gap: 60px;
+  }
+
+  .figure-venti,
+  .details-venti {
+    width: auto;
+  }
+
+  .venti-name > h3 {
+    font-size: 40px;
+  }
+
+  .venti-title > p {
+    font-size: 20px;
+  }
+
+  .venti-ideal {
+    font-size: 32px;
+  }
+
+  .image-character img {
+    width: 100%;
+  }
+
+  .video > iframe {
+    height: 360px;
+  }
+
+  /* aside */
+
+  .aside {
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .table {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .table-desc {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    width: 50%;
+  }
+
+  .table-desc div {
+    text-align: end;
+  }
+
+  /* Footer */
+
+  footer {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .about {
+    gap: 30px;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 16.5px;
+  }
+
+  /* hero */
+
+  header {
+    flex-direction: column-reverse;
+    padding: 20px 20px 20px 20px;
+    background-attachment: fixed;
+  }
+
+  .title {
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .title > h1 {
+    font-size: 36px;
+  }
+
+  .paimon > img {
+    height: 100%;
+    width: 280px;
+  }
+
+  /* navbar */
+
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    transition: 0.4s;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    transform: translateY(-100%);
+    z-index: -99;
+  }
+
+  .active {
+    transform: translateY(0);
+    transition: 0.4s;
+  }
+
+  .navbar-responsive {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    padding: 0;
+    background-color: var(--pickled-bluewood);
+    transition: 0.3s;
+  }
+
+  .navbar-responsive li p {
+    color: var(--soft-amber);
+    width: 150px;
+    text-align: center;
+  }
+
+  .navbar-responsive li button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--soft-amber);
+    text-decoration: none;
+    width: 100px;
     height: 70px;
     border: none;
     background: none;
@@ -515,7 +402,7 @@ footer {
   }
 
   .image-character img {
-    width: 300px;
+    width: 100%;
   }
 
   .video > iframe {
