--- a/style/hero.css
+++ b/style/hero.css
@@ -2,8 +2,9 @@
 
 header {
   display: flex;
+  flex: 1;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 20px 55px 0 55px;
   color: var(--pickled-bluewood);
@@ -12,7 +13,7 @@ header {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  object-fit: cover;
+  object-fit: contain;
   height: 100vh;
   position: relative;
   z-index: 1;
