--- a/style/hero.css
+++ b/style/hero.css
@@ -14,9 +14,9 @@ header {
   background-attachment: fixed;
   background-position: center;
   object-fit: contain;
-  height: 100vh;
+  height: 100%;
   position: relative;
-  z-index: 1;
+  z-index: 10;
 }
 
 .title {
