--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Text&family=Libre+Baskerville&family=Young+Serif&display=swap");
 @import url("/style/character/venti.css");
+@import url("/style/character/zhongli.css");
+@import url("/style/character/raiden.css");
+@import url("/style/character/nahida.css");
 @import url("/style/hero.css");
 @import url("/style/archon-element.css");
 @import url("/style/aside.css");
@@ -15,6 +18,17 @@
   --rangitoto: #343327;
   --santa-fe: #bc744c;
   /* pallette raiden */
+  --jacarta: #3c3272;
+  --cold-purple: #aaa5e2;
+  --medium-purple: #8a6fdd;
+  /* pallette zhongli */
+  --jambalaya: #582712;
+  --potters-clay: #885b36;
+  --equator: #deae5d;
+  /* pallette nahida */
+  --stromboli: #2e6049;
+  --olivine: #9fc07a;
+  --oxley: #6a9f7e;
 }
 
 * {
@@ -48,22 +62,12 @@ p {
 /* Scrollbar */
 
 ::-webkit-scrollbar {
-  background: transparent;
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  display: none;
+  background-color: lightgrey;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--pickled-bluewood);
-  transition: 0.3s;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--soft-amber);
-  transition: 0.3s;
 }
 
 /* navbar */
@@ -72,6 +76,7 @@ nav {
   position: sticky;
   top: 0;
   padding: 0;
+  z-index: 9;
 }
 
 .navbar {
@@ -136,7 +141,7 @@ nav {
   }
 
   .paimon > img {
-    height: 100%;
+    width: 500px;
     object-fit: fill;
   }
 
