--- a/style/hero.css
+++ b/style/hero.css
@@ -14,7 +14,7 @@ header {
   background-attachment: fixed;
   background-position: center;
   object-fit: contain;
-  height: 100%;
+  height: 100lvh;
   position: relative;
   z-index: 10;
 }
