--- a/style/hero.css
+++ b/style/hero.css
@@ -14,7 +14,8 @@ header {
   background-attachment: fixed;
   background-position: center;
   object-fit: contain;
-  height: 100lvh;
+  /* height: 100vh; */
+  height: 100%;
   position: relative;
   z-index: 10;
 }
