--- a/style/main.css
+++ b/style/main.css
@@ -150,7 +150,7 @@ nav {
   }
 
   .paimon > img {
-    width: 500px;
+    width: 100%;
     object-fit: fill;
   }
 
@@ -168,6 +168,10 @@ nav {
 
   .add-shadow {
     box-shadow: 0px 0px;
+  }
+
+  .add-shadow-responsive {
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.65);
   }
 
   .active {
