--- a/style/character/furina.css
+++ b/style/character/furina.css
@@ -1,33 +1,112 @@
+/* furina */
+
 .furina {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  text-align: center;
-  gap: 20px;
+  align-items: center;
   padding: 100px 80px 100px 80px;
 }
 
-.furina h3 {
-  font-size: 70px;
+.figure-furina,
+.details-furina {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 640px;
+}
+
+.figure-furina {
+  gap: 20px;
+}
+
+.furina-name > h3 {
+  color: var(--danube);
+  font-size: 46px;
+  line-height: 35px;
+}
+
+.furina-name {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: end;
+  gap: 15px;
+}
+
+.furina-title > p {
+  background-color: var(--astronaut);
+  padding: 5px 10px 5px 35px;
+  color: white;
+  font-size: 24px;
+  border-radius: 80px 10px 10px 10px;
+}
+
+.details-furina {
+  gap: 30px;
+}
+
+.furina-ideal {
+  color: var(--pickled-bluewood) !important;
+  font-size: 40px;
+}
+
+.details-furina > h3 {
   color: var(--danube);
 }
 
-.furina h3:nth-child(2) {
-  font-size: 35px;
-  color: var(--pickled-bluewood);
+.intro-furina {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
-.furina p:nth-child(1) {
-  font-size: 20px;
+.desc {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.furina p:nth-child(2) {
+.known-furina {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px 10px;
+}
+
+.known-furina > p {
+  background-color: var(--danube);
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.video > iframe {
+  width: 100%;
+  height: 320px;
+  border-radius: 7px;
+}
+
+.image-character {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+
+em a {
+  color: var(--danube);
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+em a:hover {
   color: var(--astronaut);
+  transition: 0.3s;
 }
 
-.furina iframe {
+.image-character img {
+  z-index: -10;
   width: 600px;
-  height: 340px;
-  border-radius: 8px;
 }
